--- a/index.html
+++ b/index.html
@@ -34,11 +34,30 @@
 										<header>
 											<h1>Hi, I’m Akash Bhargava</h1>
 										</header>
-										<p>I have completed my Degree in Information Technology from SRM University, Chennai.<br>
-											I am an experienced, hands-on, agile and result-oriented Data Analyst skilled in Python, R, SQL, and Machine Learning Algorithms to build cutting-edge technologies into actionable insights. <br>
-											My passion for Data Science comes from my love and passion in the mathematics field. I like building new things and am always open to new opportunities.<br>
-											During my free time, I enjoy music production, gymming, running and trading stocks.<br> 
-											I am actively looking for full time oportunities.
+										<p>I am an experienced, hands-on, agile and result-oriented Data Analyst skilled in Python, R, SQL, and Machine Learning Algorithms to build cutting-edge technologies into actionable insights.
+My passion for Data Science comes from my love and passion in the mathematics field. I like building new things and am always open to new opportunities.
+
+My skill set includes:
+- Programming: Python [Pandas | Numpy | Scikit Learn |Matplotlib], SQL , R [dplyr |
+ggplot2], JavaScript, Unity3D, C#, HTML/CSS.
+
+- Machine Learning Algorithms: Decision Tree, Regression and Classification, Neural Networks, Kernel Methods & SVMs, Markov Decision Process, Bayesian Learning, Game Theory.
+
+- Statistical Techniques: Regression Analysis, Time Series Forecasting, Monte Carle Simulation, Hypothesis Testing, A/B Testing.
+
+- Applications: Tableau, Microsoft Office, Github, Qlik, Oracle SQL, MySQL, Apache Spark, AWS, IBM Watson, IBM Quantum.
+
+- Finance: Derivatives, Corporate Finance, Economics (Micro/Macro)
+
+My core skills include:
+- Data Mining
+- Data Engineering
+- Natural Language Processing
+- Data Analysis
+- Data Visualization
+- Artificial Intelligence
+- Neural Networks
+- Web Scraping
 										 </p>
 							
 									</div>
