--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ My core skills include:
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="actions stacked">
-												<li><a href="RESUMEJULY2020.pdf" target="_blank" class="button primary fit">Resume</a></li>
+												<li><a href="ABResume2021.pdf" target="_blank" class="button primary fit">Resume</a></li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-small">
@@ -221,7 +221,7 @@ My core skills include:
 									</header>
 									<ul>
 										<li><a href="index1.html">About Me</a></li>
-										<li><a href="RESUMEJULY2020.pdf" target="_blank">Resume</a></li>
+										<li><a href="ABResume2021.pdf" target="_blank">Resume</a></li>
 									</ul>
 								</nav>
 
