--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ My core skills include:
 							
 									</div>
 									<span class="image object">
-										<img src="Mypic.jpeg" alt="" />
+										<img src="DEF4BECB-57BF-4430-A5DA-331CF1A5FBAE.JPG
+" alt="" />
 									</span>
 								</section>
 
