--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ My core skills include:
 									</header>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto: akashbhargavamumbai@gmail.com">akashbhargavamumbai@gmail.com</a></li>
-										<li class="icon solid fa-home">Mumbai, India</li>
+										<li class="icon solid fa-home">Dallas, USA</li>
 									</ul>
 								</section>
 
