--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@ My core skills include:
 											<div class="content">
 												<h3>Sanctum Wealth Management</h3>
 												<h5>Software Intern - 3/2020 to 7/2020</h5>
-												<p>Developed a code to help in Portfolio Management to analyze returns. </p>
+												<p>Was a part of the Technical Derivatives Team, 
+Built a software for Portfolio Management which could help the user understand the Performance Attribution
+, Scraped web data from stock data sites (Screener) to extract data which was useful for Analysis </p>
 											</div>
 										</article>
 										
