--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ My core skills include:
 							
 									</div>
 									<span class="image object">
-										<img src="B53526D0-4137-4CAD-A5C4-1B37EC7B6961.JPG
-" alt="" />
+										<img src="photo.jpeg" alt="" />
 									</span>
 								</section>
 
