--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@ Built a software for Portfolio Management which could help the user understand t
 											<div class="content">
 												<h3>JP Morgan</h3>
 												<h5>Virtual Software Intern - 4/2020 to 5/2020</h5>
-												<p>Established Financial Data Feeds.
-												Learned how to  perform Data Quality Assessment.
-												Learned Unit Testing, handling stock data feed using JPMogran frameworks and Tools such as Perspective .
+												<p>Established Financial Data Feeds.</p>												Learned how to  perform Data Quality Assessment.
+												<p>Learned Unit Testing, handling stock data feed using JPMogran frameworks and Tools such as Perspective .
 												</p>
 											</div>
 										</article>
