--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@ My core skills include:
 											<div class="content">
 												<h3>Asha Electronics Pvt Ltd</h3>
 												<h5>Software Intern 08/2020 to 07/2021 </h5>
-												<p>Designed Customer Service Module. 
-												  Developed an algorithm in Python for prescriptive analytics. 
-												  Developed the predictive model using Gradient Boosting Algorithm using Python.
+												<p>• Used tools like MySql and R to store the data and perform statistical analysis on the dataset.\\• Used Tableau for visualization.\\• Designed Customer Service Module
 													Validated and tested models based on unseen points; deployed the models on internal server for time-based testing.
 													Performed Data Analysics Techniques to maintain Customer Data.
 													Made a Electonic Component screener to find parts at best price. 
