--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 											<h1>Hi, I’m Akash Bhargava</h1>
 										</header>
 										<p>I am an experienced, hands-on, agile and result-oriented Data Analyst skilled in Python, R, SQL, and Machine Learning Algorithms to build cutting-edge technologies into actionable insights.
-My passion for Data Science comes from my love and passion in the mathematics field. I like building new things and am always open to new opportunities.
-
+My passion for Data Science comes from my love and passion in the mathematics field. I like building new things and am always open to new opportunities.</p>
+<p>
 My skill set includes:
 - Programming: Python [Pandas | Numpy | Scikit Learn |Matplotlib], SQL , R [dplyr |
 ggplot2], JavaScript, Unity3D, C#, HTML/CSS.
