--- a/index.html
+++ b/index.html
@@ -40,15 +40,20 @@ My passion for Data Science comes from my love and passion in the mathematics fi
 My skill set includes:
 - Programming: Python [Pandas | Numpy | Scikit Learn |Matplotlib], SQL , R [dplyr |
 ggplot2], JavaScript, Unity3D, C#, HTML/CSS.
-
+										</p>
+										<p>
 - Machine Learning Algorithms: Decision Tree, Regression and Classification, Neural Networks, Kernel Methods & SVMs, Markov Decision Process, Bayesian Learning, Game Theory.
-
+										</p>
+										<p>
 - Statistical Techniques: Regression Analysis, Time Series Forecasting, Monte Carle Simulation, Hypothesis Testing, A/B Testing.
-
+										</p>
+										<p>
 - Applications: Tableau, Microsoft Office, Github, Qlik, Oracle SQL, MySQL, Apache Spark, AWS, IBM Watson, IBM Quantum.
-
+										</p>
+										<p>
 - Finance: Derivatives, Corporate Finance, Economics (Micro/Macro)
-
+										</p>
+										<p>
 My core skills include:
 - Data Mining
 - Data Engineering
@@ -77,7 +82,9 @@ My core skills include:
 											<div class="content">
 												<h3>Asha Electronics Pvt Ltd</h3>
 												<h5>Software Intern 08/2020 to 07/2021 </h5>
-												<p>• Used tools like MySql and R to store the data and perform statistical analysis on the dataset.\\• Used Tableau for visualization.\\• Designed Customer Service Module
+												<p>• Used tools like MySql and R to store the data and perform statistical analysis on the dataset.<br/>
+													• Used Tableau for visualization.<br/>
+													• Designed Customer Service Module<br/>
 													Validated and tested models based on unseen points; deployed the models on internal server for time-based testing.
 													Performed Data Analysics Techniques to maintain Customer Data.
 													Made a Electonic Component screener to find parts at best price. 
