--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ My core skills include:
 													• Designed Customer Service Module<br/>
 													• Validated and tested models based on unseen points<br/>
 													• Deployed the models on internal server for time-based testing.<br/>
-													• Performed Data Analysics Techniques to maintain Customer Data.<br/>
-													• Made a Electonic Component screener to find parts at best price. 
+													• Performed Data Analytics Techniques to maintain Customer Data.<br/>
+													• Made an Electonic Component screener to find parts at best price. 
 												</p>
 											</div>
 										</article>										
@@ -133,9 +133,9 @@ My core skills include:
 										<article>
 											<a  class="image" href="https://github.com/AkashB98" target="_blank"><img src="Project1.jpg" alt="" /></a>
 											<h3>Financial Analysis of Company based on Machine Learning</h3>
-											<p>Developing a Stock Price Prediction model based on:R programming for graphical representation.
-												Python for data extraction, regression and sentiment analysis.
-												HTML-CSS for site development.
+											<p>• Understood and analyzed financial accounts with the framework of a financing structure.<br/>
+												• Estimated the financing needs of a corporation and its cost of capital Assess which financial instruments (equity or debt) are the most appropriate.<br/>
+												• Implemented a successful capital increase, equity rights issue.
 											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/AkashB98" target="_blank" class="button">View Repo</a></li>
@@ -174,7 +174,7 @@ My core skills include:
 										
 										<article>
 											<a href="https://github.com/AkashB98" target="_blank" class="image"><img src="Project3.jpg" alt="" /></a>
-											<h3>Home automation</h3>
+											<h3>Stock Prediction Algorithm | Python, R, HTMLCSS, ML</h3>
 											<p>• Used R programming for Data Visualization.<br/>
 												• Implemented Python for Data Scraping and Analyis.<br/>
 												• HTMLCSS for Site Developement and ML Algorithms like Gradient Boosting and Backtracking</p>
@@ -185,8 +185,8 @@ My core skills include:
 										
 										<article>
 											<a href="https://github.com/AkashB98" target="_blank" class="image"><img src="Project3.jpg" alt="" /></a>
-											<h3>Stock Prediction Algorithm | Python, R, HTMLCSS, ML </h3>
-											<p>App to control lights using Iot.</p>
+											<h3>Instagram and Spotify Clone | React, Java, CSS </h3>
+											<p>• Developed a full web application of Instargam and Spotify with all the features including comments and direct messaging</p>
 											<ul class="actions">
 												<li><a href="https://github.com/AkashB98" target="_blank" class="button">View Repo</a></li>
 											</ul>
