--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ My core skills include:
 										</article>
 										
 										<article>
-											<a href="https://github.com/AkashB98" target="_blank" class="image"><img src="Project3.jpg" alt="" /></a>
+											<a href="https://github.com/AkashB98" target="_blank" class="image"><img src="stock.jpeg" alt="" /></a>
 											<h3>Stock Prediction Algorithm | Python, R, HTMLCSS, ML</h3>
 											<p>• Used R programming for Data Visualization.<br/>
 												• Implemented Python for Data Scraping and Analyis.<br/>
@@ -184,7 +184,7 @@ My core skills include:
 										</article>
 										
 										<article>
-											<a href="https://github.com/AkashB98" target="_blank" class="image"><img src="Project3.jpg" alt="" /></a>
+											<a href="https://github.com/AkashB98" target="_blank" class="image"><img src="Instaspotify.jpeg" alt="" /></a>
 											<h3>Instagram and Spotify Clone | React, Java, CSS </h3>
 											<p>• Developed a full web application of Instargam and Spotify with all the features including comments and direct messaging</p>
 											<ul class="actions">
