--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ My core skills include:
 											<div class="content">
 												<h3>Sanctum Wealth Management</h3>
 												<h5>Software Intern - 3/2020 to 7/2020</h5>
-												<p>• Was a part of the Technical Derivatives Team.<br/>
-													• Built a software for Portfolio Management which could help the user understand the Performance Attribution.<br/>
-													• Scraped web data from stock data sites (Screener) to extract data which was useful for Analysis </p>
+												<p>• Worked with a team of 20 in technical derivatives.<br/>
+													• Created Portfolio management software to assist users in understanding performance attribution.<br/>
+													• Utilized web scraping to collect stock data for Prediction & Analysis.</p>
 											</div>
 										</article>
 										
@@ -109,9 +109,9 @@ My core skills include:
 											<div class="content">
 												<h3>JP Morgan</h3>
 												<h5>Virtual Software Intern - 4/2020 to 5/2020</h5>
-												<p>• Established Financial Data Feeds.<br/>											
-												• Learned how to  perform Data Quality Assessment.<br/>
-												• Learned Unit Testing, handling stock data feed using JPMogran frameworks and Tools such as Perspective .
+												<p>• Gained expertise in Data Quality Assessment through a Virtual Internship in Software Engineering.<br/>											
+												• Generated Data Insights like understanding the pattern of data using the JPM Software.<br/>
+												• Developed unit testing techniques, handled stock data feeds, and utilized tools such as Perspective.
 												</p>
 											</div>
 										</article>
