--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ My core skills include:
 									</header>
 									<ul>
 										<li><a href="index1.html">About Me</a></li>
-										<li><a href="AkashBhargavaresume.pdf
+										<li><a href="AkashBhargavaResume.pdf
 " target="_blank">Resume</a></li>
 									</ul>
 								</nav>
