--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ My core skills include:
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="actions stacked">
-												<li><a href="AkashBhargavaresume.pdf
+												<li><a href="AkashBhargavaResume.pdf
 " target="_blank" class="button primary fit">Resume</a></li>
 											</ul>
 										</div>
