--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 									</header>
 									<div class="posts">
 										<article>
-											<a  class="image" href="https://public.tableau.com/views/HRAnalyticsbyAkashBhargava/HRAnalyticsDASH?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" target="_blank"><img src="tableau.jpeg" alt="" /></a>
+											<a  class="image" href="https://public.tableau.com/views/HRAnalyticsbyAkashBhargava/HRAnalyticsDASH?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" target="_blank"><img src="tab.png" alt="" /></a>
 											<h3>HR Analytics Dashboard</h3>
 											<p>• Created a tableau Dashboard to calculate attrition for HR.
 											</p>
-										
+										</article>
 										<article>
 											<a  class="image" href="https://github.com/AkashB98/AWS-SAGEMAKER-BANKING-APPLICATION" target="_blank"><img src="AWS.png" alt="" /></a>
 											<h3>AWS SAGEMAKER BANKING APPLICATION</h3>
