--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="actions stacked">
-												<li><a href="AkashBhargavaResume_updated(AA).pdf
+												<li><a href="AkashBhargava_Resume.pdf
 " target="_blank" class="button primary fit">Resume</a></li>
 											</ul>
 										</div>
@@ -280,7 +280,7 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 									</header>
 									<ul>
 										<li><a href="index1.html">About Me</a></li>
-										<li><a href="AkashBhargavaResume_updated(AA).pdf
+										<li><a href="AkashBhargava_Resume.pdf
 " target="_blank">Resume</a></li>
 									</ul>
 								</nav>
