--- a/index.html
+++ b/index.html
@@ -79,16 +79,30 @@ My core skills include:
 									<div class="features">
 										<article>
 											<div class="content">
+												<h3>Altifarm Enverde</h3>
+												<h5>Senior Data Analyst 08/2023 to Present </h5>
+												<p>• Market Research & Product Analytics: Achieved a 15% increase in conversion rates and a 20% improvement in customer engagement by collecting marketing data and other customer data and analyzing it using analytical techniques such as root cause analysis and hypothesis testing to provide insights that support informed decision-making.<br/>
+													• Data Mining: Achieved a 95% data completeness rate and a 30% reduction in data inconsistencies through meticulous cleaning, preprocessing, and data validation. These improvements ensured the accuracy, consistency, and reliability of data, significantly enhancing the precision of key performance indicators and bolstering the effectiveness of business analysis.<br/>
+													• Data Visualization & Communication: Enabled data-driven initiatives by creating impactful data visualizations and comprehensive reports using digital tools, resulting in a 25% increase in click-through rates and a 10% rise in customer satisfaction scores, effectively communicating findings and feedback to stakeholders.<br/>
+													• Teamwork & Collaboration: Collaborating seamlessly with cross-functional teams to drive strategic data-driven initiatives, focusing on performance measurement through metrics like a 12% increase in ROI and a 15% reduction in customer acquisition cost, while prioritizing root cause analysis to optimize outcomes.<br/>
+													Tools Used: ETL, Looker, Python, PowerBI, MS Office (Excel with VBA, Word, PowerPoint), Google Analytics, A/b Testing, Web Analytics (E-Commerce)<br/>
+												</p>
+											</div>
+										</article>	
+										
+										<article>
+											<div class="content">
 												<h3>University of Texas at Dallas</h3>
-												<h5>Student Worker 03/2023 to 04/2023 </h5>
-												<p>• Developing reports and PowerPoint templates to report security topics to a variety of audience.<br/>
-													• Working on Software Development using Java, Python and on configuration of tools.<br/>
-													• Collaborating with cross functional teams to gather and understand business requirements
-and translate them into analytical insights.<br/>
+												<h5>Data Analyst 02/2023 to 05/2023 </h5>
+												<p>• Data Processing & Research: Accomplished a remarkable 23% faster delivery of insights by incorporating Python, R, and SQL to conduct in-depth analysis of
+large datasets, uncovering valuable trends and patterns that empowered data-driven business decisions.<br/>
+								
+													• Designed software using Java and Python while implementing security tools enhancing security measures within the organization by 32%.<br/>
 													• Identifying vulnerabilities in servers and web applications.<br/>
 													• Deployed the models on internal server for time-based testing.<br/>
-													• Gathered, examined, and presented data findings to organization executives that led to a 10% reduction in process failure
-eventually leading to leaner manufacturing.<br/> 
+													• Data Management and Validation: Gained 50% more accurate analysis and reporting by demonstrating proficiency in data management techniques, including data
+warehousing procedures, data validation, and SQL database maintenance.<br/> 
+													Tools Used: SAS, Python (Panda, NumPy, Scikit Learn), Java, SQL, R (dplyr, ggplot2), Security Operation (Vectra, Hive), Data Warehousing, Adobe Analytics.<br/>
 												</p>
 											</div>
 										</article>	
@@ -96,16 +110,21 @@ eventually leading to leaner manufacturing.<br/>
 										<article>
 											<div class="content">
 												<h3>Asha Electronics Pvt Ltd</h3>
-												<h5>Software Intern 12/2019 to 08/2021 </h5>
+												<h5>Business Data Analyst (Intern + Full Time) 09/2017 to 08/2021 </h5>
 												<p>• Analyzed and interpreted large datasets to identify trends and patterns and used findings to inform business decisions.<br/>
-													• Built and automated dashboards for teams to react immediately to failure points in operations pipeline (permitting,
-inspection, installation) and improved customer satisfaction by 15%, communicating closely with field managers by
-subjecting them to continuous tracking.<br/>
-													• Designed Customer Service Module<br/>
-													• Validated and tested models based on unseen points<br/>
-													• Trained and mentored junior team members on data analysis techniques and tools<br/>
-													• Performed Data Analytics Techniques to maintain Customer Data.<br/>
-													• Made an Electonic Component screener to find parts at best price. 
+													• Business Intelligence: Improved data accessibility by 20% through the performance of analytics techniques and scripting languages such as Python and SQL to
+analyze intricate datasets, resulting in actionable insights.<br/>
+													• Product Management: Achieved a remarkable 68% enhancement in existing customer satisfaction and forecasted a 27% surge in new customers through a
+combination of ad hoc data analysis, hypothesis testing which supported KPIs related to product performance, pricing strategies contributing to substantial
+improvements in business success.<br/>
+													• Performance Analysis: Led to a 20% improvement in operational efficiency and a 15% increase in revenue by creating comprehensive reports and dashboards
+using data analysis tools providing integrated views for data-driven decision-making.<br/>
+													• Strategy Planning & Supply Chain: Spearheaded the application of analytics techniques to surpass yearly savings plan by 30% and achieve $200K in cost savings,
+led strategic initiatives including low-cost sourcing, focused negotiations, engineering changes, and component resourcing across suppliers, driving substantial
+financial outcomes.<br/>
+													• Optimization, Forecasting, and CRM Consulting: Championed resource optimization, cost efficiency, and CRM consulting by managing a $1.5M global spend;
+utilized advanced analytics skills to identify cost-saving opportunities which resulted in a 25% reduction in operational expenses, with a strong emphasis on forecasting accuracy and comprehensive documentation of cost-saving strategies.<br/>
+													Tools Used: Snowflake, Python (Panda, NumPy, Scikit Learn), MySQL, Tableau, Microsoft Excel, Quantitative Analysis, Data Modeling 
 												</p>
 											</div>
 										</article>										
@@ -244,7 +263,7 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="actions stacked">
-												<li><a href="AkashBhargava_Resume.pdf
+												<li><a href="Akash-Bhargava_Resume.pdf
 " target="_blank" class="button primary fit">Resume</a></li>
 											</ul>
 										</div>
@@ -260,7 +279,7 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="actions stacked">
-												<li><a href="mailto: akashbhargavamumbai@gmail.com" class="button primary fit">Email</a></li>
+												<li><a href="mailto: akashbhargava98work@gmail.com" class="button primary fit">Email</a></li>
 											</ul>
 										</div>
 									</div>
@@ -280,7 +299,7 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 									</header>
 									<ul>
 										<li><a href="index1.html">About Me</a></li>
-										<li><a href="AkashBhargava_Resume.pdf
+										<li><a href="Akash-Bhargava_Resume.pdf
 " target="_blank">Resume</a></li>
 									</ul>
 								</nav>
@@ -291,7 +310,7 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 										<h2>Get in touch</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mailto: akashbhargavamumbai@gmail.com">akashbhargavamumbai@gmail.com</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: akashbhargava98work@gmail.com">akashbhargavamumbai@gmail.com</a></li>
 										<li class="icon solid fa-home">Dallas, USA</li>
 									</ul>
 								</section>
