--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ My core skills include:
 							
 									</div>
 									<span class="image object">
-										<img src="1601E5CB-7B75-4F89-B277-635DD9739E18_1_201_a.jpeg" alt="" />
+										<img src="Github.jpg" alt="" />
 									</span>
 								</section>
 
