--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ used for Prediction, Analysis and determining risk let to 5% growth in revenue.<
 										<h2>Get in touch</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mailto: akashbhargava98work@gmail.com">akashbhargavamumbai@gmail.com</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto: akashbhargava98work@gmail.com">akashbhargava98work@gmail.com</a></li>
 										<li class="icon solid fa-home">Dallas, USA</li>
 									</ul>
 								</section>
