--- a/index.html
+++ b/index.html
@@ -77,14 +77,26 @@ My core skills include:
 										<h2>My Work Experience</h2>
 									</header>
 									<div class="features">
+											<article>
+											<div class="content">
+												<h3>Elevate Credit</h3>
+												<h5>Marketing Data Analyst 01/2024 to Present </h5>
+												<p>• Customer Research & Data Analytics: Utilized data analytics to target the right customer segment, troubleshoot website design and user experience (UX), and achieved a 40% increase in page views. Also, Identified and rectified web design language issues resulting in a 20% improvement in site speed.<br/>
+													• Data Validation & Testing: Conducted comprehensive analysis of website traffic, page views, and visit durations and presented solutions that led to a 15% boost in conversion rates. Implemented & tested tags on GTM which enhanced tracking rates by 20%.<br/>
+													• Data Visualization & Reporting: Developed interactive dashboards using tools like Looker or Power BI to visually represent financial data, enabling stakeholders to gain insights and make informed decisions this led to an increase in user engagement by 25%, leading to a 30% improvement in decision-making efficiency.<br/>
+													• Teamwork & Collaboration: Collaborating seamlessly with cross-functional teams to drive strategic data-driven initiatives, focusing on performance measurement through metrics like a 12% increase in ROI and a 15% reduction in customer acquisition cost, while prioritizing root cause analysis to optimize outcomes.<br/>
+													Tools Used: Google Analytics, Google Tag Manager, Looker, Python, PowerBI, MS Office (Excel, Word), Snowflake, SQL, Analytics (E-Commerce)<br/>
+												</p>
+											</div>
+										</article>	
+										
 										<article>
 											<div class="content">
 												<h3>Altifarm Enverde</h3>
-												<h5>Senior Data Analyst 08/2023 to Present </h5>
+												<h5>Senior Data Analyst 08/2023 to 12/2023 </h5>
 												<p>• Market Research & Product Analytics: Achieved a 15% increase in conversion rates and a 20% improvement in customer engagement by collecting marketing data and other customer data and analyzing it using analytical techniques such as root cause analysis and hypothesis testing to provide insights that support informed decision-making.<br/>
 													• Data Mining: Achieved a 95% data completeness rate and a 30% reduction in data inconsistencies through meticulous cleaning, preprocessing, and data validation. These improvements ensured the accuracy, consistency, and reliability of data, significantly enhancing the precision of key performance indicators and bolstering the effectiveness of business analysis.<br/>
 													• Data Visualization & Communication: Enabled data-driven initiatives by creating impactful data visualizations and comprehensive reports using digital tools, resulting in a 25% increase in click-through rates and a 10% rise in customer satisfaction scores, effectively communicating findings and feedback to stakeholders.<br/>
-													• Teamwork & Collaboration: Collaborating seamlessly with cross-functional teams to drive strategic data-driven initiatives, focusing on performance measurement through metrics like a 12% increase in ROI and a 15% reduction in customer acquisition cost, while prioritizing root cause analysis to optimize outcomes.<br/>
 													Tools Used: ETL, Looker, Python, PowerBI, MS Office (Excel with VBA, Word, PowerPoint), Google Analytics, A/b Testing, Web Analytics (E-Commerce)<br/>
 												</p>
 											</div>
