--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ My core skills include:
 							
 									</div>
 									<span class="image object">
-										<img src="gitpic.JPG" alt="" />
+										<img src="me2024.JPG" alt="" />
 									</span>
 								</section>
 
